[package]
name = "mid-point-ellipse"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
rand = { version = "0.7.0", features = ["small_rng"] }
shape-core = "0.0.5"
itertools = "0.10.3"
float-ord = "0.3.2"


[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
